Fixed slider spacing

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -30,7 +30,7 @@ nav ul .active {
 }
 
 .slider {
-  margin-top: 64px;
+  margin-top: 10px;
   margin-bottom: 35px;
 }
 
